// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Checkbox 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am a checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Checkbox with no label 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to defaultChecked 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am checked by default
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 jxKJCC"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa sc-fzXfNc bSPfCk"
          disabled=""
          id="checkbox-1"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
          disabled=""
        />
        <p
          class="sc-AykKF gRcVjH"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
          I am disabled
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 jxKJCC"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa sc-fzXfNc bSPfCk"
          disabled=""
          id="checkbox-2"
          type="checkbox"
        />
        <div
          checked=""
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
          disabled=""
        />
        <p
          class="sc-AykKF gRcVjH"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
          I am disabled
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to error 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 djfPeS sc-fzXfNc bSPfCk"
          id="checkbox"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am error
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 djfPeS sc-fzXfNc bSPfCk"
          id="checkbox"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am error
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox"
          required=""
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am a checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox With state 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox-1"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am controlled and checked
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox-2"
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eVpbJR"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am controlled and unchecked
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox indeterminate 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox"
          readonly=""
          type="checkbox"
        />
        <div
          checked=""
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eUjqVh"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am an indeterminate checkbox
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 bJQgsS sc-fzXfNc bSPfCk"
          id="checkbox"
          readonly=""
          type="checkbox"
        />
        <div
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eUjqVh"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am a unchecked indeterminate checkbox
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 hdKIjC"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 djfPeS sc-fzXfNc bSPfCk"
          id="checkbox"
          readonly=""
          type="checkbox"
        />
        <div
          checked=""
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eUjqVh"
        />
        <p
          class="sc-AykKF jKbmDj"
          color="currentColor"
          font-size="16px"
        >
          I am an indeterminate checkbox with an error
        </p>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNc bSPfCk"
    >
      <label
        class="ClickInputLabel-j2axnv-0 jxKJCC"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Checkbox__CheckboxInput-sc-1nm58f1-1 gYNwWa sc-fzXfNc bSPfCk"
          disabled=""
          id="checkbox"
          readonly=""
          type="checkbox"
        />
        <div
          checked=""
          class="Checkbox__VisualCheckbox-sc-1nm58f1-0 eUjqVh"
          disabled=""
        />
        <p
          class="sc-AykKF gRcVjH"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
          I am a disabled indeterminate checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;
